[gd_scene load_steps=5 format=3 uid="uid://c0324msajig8q"]

[ext_resource type="Script" path="res://scenes/ui/settings/cycle_setting.gd" id="1_8d5vq"]
[ext_resource type="Texture2D" uid="uid://bv76ocvemosw2" path="res://assets/ui/arrow-left.png" id="2_1uw6o"]
[ext_resource type="Texture2D" uid="uid://bgu8j2ky4khjf" path="res://assets/ui/arrow-right.png" id="3_casjg"]

[sub_resource type="LabelSettings" id="LabelSettings_vnp73"]
font_size = 20

[node name="CycleSetting" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8d5vq")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -16.5
offset_right = 110.0
offset_bottom = 16.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 7

[node name="BtnLeft" type="Button" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/icon_normal_color = Color(0.707967, 0.707967, 0.707967, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(0.60933, 0.60933, 0.60933, 1)
icon = ExtResource("2_1uw6o")
flat = true
icon_alignment = 1

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_vertical = 1
text = "Setting"
label_settings = SubResource("LabelSettings_vnp73")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnRight" type="Button" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/icon_normal_color = Color(0.707967, 0.707967, 0.707967, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(0.60933, 0.60933, 0.60933, 1)
icon = ExtResource("3_casjg")
flat = true
icon_alignment = 1

[connection signal="pressed" from="PanelContainer/HBoxContainer/BtnLeft" to="." method="_on_btn_left_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/BtnRight" to="." method="_on_btn_right_pressed"]
